# Multi_servs_aut

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  main_simple.py  tasks.py
app/api/v1/: __init__.py  admin.py  auth.py  messages.py  sheets.py  websocket.py
app/core/: cache.py  celery.py  config.py  database.py  exceptions.py  monitoring.py  rate_limiting.py  security.py  versioning.py
app/models/: role.py  user.py
app/schemas/: admin.py  message.py  user.py
scripts/: setup.sh
services/: __init__.py  sheets_service.py  slack_service.py  telegram_service.py
tests/: test_api.py  test_sheets_service.py  test_slack_service.py  test_telegram_service.py
